name:                app
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  js-sources:          js/util.js
  main-is:             Main.hs
  build-depends: base
               , aeson
               , base64-bytestring
               , bytestring
               , ghcjs-base
               , ghcjs-dom
               , jsaddle
               , miso
               , merkle-schemes
               , hgit
               , network-uri
               , text
  default-language:    Haskell2010
